[package]
name = "fq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fq"

[lib]
name = "fq"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
csv = "1.2.2"
dirs = "5.0.1"
mime_guess = "2.0.4"
nom = "7"
regex = "1.8"
